--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,9 @@
 <h2><%= article.title %></h2>
 <p><%= article.created_at %></p>
 <p><%= article.text %></p>
-<p><%= link_to 'Show', article_path(article) %> | <%= link_to 'Edit', edit_article_path(article) %></p>
+<p>
+  <%= link_to 'Show', article_path(article) %> | 
+  <%= link_to 'Edit', edit_article_path(article) %>
+</p>
 <hr>
 <% end %>
