--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Articles", articles_path  %></li>
             <% if user_signed_in? %>
-            <li><%= current_user.email %></li>
+            <li><%= current_user.username %></li>
             <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
             <% else %>
             <li><%= link_to 'Sign in', new_user_session_path %></li>
